src/styles/sidebar.less
.sidebar {
  display: flex;
  flex-direction: column;
  flex: 1 1 auto;
}

.sidebar__content {
  max-width: 100%;
}

.sidebar__info-group {
  color: @font-color-blue-inverted;
  padding-bottom: @grid-unit * 2;
  cursor: default;
}

.sidebar__action-group {
  color: @font-color-blue-inverted;
  padding-bottom: @grid-unit * 2;
  cursor: default;
}

.sidebar__info-group-label-item {
  font-weight: bold;
}

.sidebar__info-group-value-items {
  max-height: 350px;
  overflow-y: auto;
  cursor: default;

  &--small {
    max-height: 210px;
  }
}

.sidebar__info-group-value-item {
  font-size: 13px;
  padding-left: @grid-unit * 2;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.sidebar__info-group-value-item {
  font-size: 13px;
  padding-left: @grid-unit * 2;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;

  &--link {
    padding-left: 0;
  }
}

.sidebar__info-group-detail-item {
  color: @link-color;
  font-size: 13px;
  padding-right: @grid-unit * 2;

  cursor: pointer;
  float: left;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;

  &--is-loading {
    color: @link-color--disabled;
    font-weight: normal;
    opacity: 0.5;
    text-decoration: none;

    pointer-events: none;
  }
}

.sidebar__info-group-detail-item:hover {
  color: @link-hover-color;
  text-decoration: underline;
}

.sidebar__info-group-details-wrapper {
  position: relative;
  display: inline-block;
  width: 20px;
  height: 20px;
}

.sidebar__info-group-details-container {
  position: absolute;
}

.sidebar__default-cursor {
  cursor: default;
}

